-Scrollbar for long task descriptions in webfrontend (Bug 644))
git-svn-id: svn+ssh://svn.verinice.org/data/subversion/svnroot/TRUNK@3611 4c0145ca-515c-4d1a-a6bc-f9bd594c3410

--- a/sernet.gs.server/WebContent/css/basemod.css
+++ b/sernet.gs.server/WebContent/css/basemod.css
@@ -20,8 +20,8 @@
    * @css-for all
    * @valid CSS3
    */
-
-  body { overflow-y: scroll; }
+  html { height: 100%; }
+  body { overflow-y: scroll; height: 100%; }
 
   /*-------------------------------------------------------------------------*/
 
@@ -29,13 +29,12 @@
   .page_margins { margin: 0 auto; }
 
   /* Layout Properties | Layout-Eigenschaften */
-  .page_margins { width: auto;  min-width: 1000px; max-width: 1000px;}
-  .page { padding: 10px; 
-  	}
+  .page_margins { width: auto;  min-width: 1000px; max-width: 1000px; height: 100%;}
+  .page { padding: 10px; height: 100%;}
   #topnav { color: #aaa; background: transparent; }
   #nav { overflow:hidden; }
   div.hlist {  }
-  #main { margin: 10px 0; float:left; *float:none; width:100%;}
+  #main { margin: 10px 0; float:left; *float:none; width:100%; height: 100%; overflow: hidden }
 
   /* (en) navigation: horizontal adjustment | (de) horizontale Ausrichtung  */
   #nav ul { margin-left: 20px; }
